@@ -1,5 +1,5 @@
 #!/usr/bin/env python
-# Copyright (C) 2007, 2008, 2009 CEA
+# Copyright (C) 2007-2011 CEA
 #
 # This file is part of shine
 #
@@ -30,8 +30,7 @@ __author__ = "Stephane Thiell"
 import getopt
 import sys
 
-import warnings
-warnings.simplefilter('ignore', DeprecationWarning)
+sys.path.append("../lib")
 
 from Shine import public_version, __version__ as __libversion__
 from Shine.Controller import Controller
