@@ -1,3 +1,6 @@
+2012-01-19 Aurelien Degremont  <aurelien.degremont@cea.fr>
+	* Remove last code which raises DeprecationWarning (ticket #22).
+
 2012-01-18 Aurelien Degremont  <aurelien.degremont@cea.fr>
 	* More deterministic target order when using backend (ticket #113).
 
